pkg/synthesis/tests_expected_output/k8s_resources/ExampleGroup2/pods.yaml
apiVersion: v1
kind: Pod
metadata:
    labels:
        VMs_within_IPs__192.168.10.5: "true"
        group__A-by-IP: "true"
        group__frontend: "true"
    name: A
    namespace: default
spec:
    containers: null
status: {}
---
apiVersion: v1
kind: Pod
metadata:
    labels:
        group__backend: "true"
    name: B
    namespace: default
spec:
    containers: null
status: {}
