pkg/synthesis/tests_expected_output/k8s_resources/ExampleGroup2/policies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: 'src: (VMs within IPs 192.168.10.5) dst: (group = backend) conn: TCP dst-ports: 445'
        nsx-id: "1004"
    name: policy-0
    namespace: default
spec:
    egress:
        - ports:
            - port: 445
              protocol: TCP
          to:
            - podSelector:
                matchExpressions:
                    - key: group__backend
                      operator: Exists
    podSelector:
        matchExpressions:
            - key: VMs_within_IPs__192.168.10.5
              operator: Exists
    policyTypes:
        - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: 'src: (VMs within IPs 192.168.10.5) dst: (group = backend) conn: TCP dst-ports: 445'
        nsx-id: "1004"
    name: policy-1
    namespace: default
spec:
    ingress:
        - from:
            - podSelector:
                matchExpressions:
                    - key: VMs_within_IPs__192.168.10.5
                      operator: Exists
          ports:
            - port: 445
              protocol: TCP
    podSelector:
        matchExpressions:
            - key: group__backend
              operator: Exists
    policyTypes:
        - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: default deny policy for namespace default
        nsx-id: "1003"
    name: default-deny-for-default
    namespace: default
spec:
    podSelector: {}
    policyTypes:
        - Ingress
        - Egress
